--- a/Conf/Profile.conf
+++ b/Conf/Profile.conf
@@ -1,4 +1,13 @@
-# Profile
+// ==UserScript==
+// @Name              QX 小白配置文件
+// @Author            Cuttlefish
+// @Tg group          https://t.me/ddgksf2013
+// @WechatID          公众号墨鱼手记
+// @UpdateTime        20200922
+// @Explain           若有问题，可以去TG群反馈
+// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Profile.conf
+// ==/UserScript==
+
 [general]
 server_check_url= http://www.qualcomm.cn/generate_204
 profile_img_url=https://github.githubassets.com/images/modules/site/integrators/google.png
@@ -27,6 +36,12 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 6 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js, tag=进店领豆, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, enabled=true
 
 [rewrite_local]
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Advertising.conf,tag=去广告, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/TikTok.conf,tag=TikTok分流, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Zhihu.conf,tag=知乎去广告, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Q-Search.conf,tag=快捷搜索, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Quan_crack.conf,tag=Crack会员, enabled=true
+
 
 [server_local]
 shadowsocks=music.desperadoj.com:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_vrfn, fast-open=false, udp-relay=false, tag=网易云音乐
@@ -43,21 +58,53 @@ server=117.50.11.11
 server=52.80.66.66
 
 [policy]
-#网易云音乐解锁策略
-static=网易云音乐, 网易云音乐, img-url=Netease_Music_Unlock.png
+static=网易云音乐, 网易云音乐, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 static=Youtube, proxy, img-url=https://raw.githubusercontent.com/ddgksf2013/QuantumultX/master/Icon/YouTube.png
 static=Bahamut, proxy, img-url=https://raw.githubusercontent.com/ddgksf2013/QuantumultX/master/Icon/Bahamut.png
 
 [server_remote]
-
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Server/Netease.list,tag=网易云解锁服务器, enabled=true
 
 [filter_remote]
-https://raw.githubusercontent.com/demo2099/QTXScripts/master/filter/NeteaseMusic.list, tag=🎸解锁网易云音乐, force-policy=网易云音乐, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=网易云音乐, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/Advertising.list, tag=去广告, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/Global.list, tag=代理, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/TikTok.list, tag=TikTok, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/Zhihu.list, tag=知乎去AD, enabled=true
 
 [filter_local]
+ip-cidr, 10.0.0.0/8, direct
+ip-cidr, 127.0.0.0/8, direct
+ip-cidr, 172.16.0.0/12, direct
+ip-cidr, 192.168.0.0/16, direct
+ip-cidr, 224.0.0.0/24, direct
+ip-cidr, 182.254.116.0/24, direct
+geoip, cn, direct
+final, proxy
 
 [mitm]
-#~~~~~~~~~~~~~~~~~~~~~
+//      ............................................. 
+//                            _ooOoo_  
+//                           o8888888o  
+//                           88" . "88  
+//                           (| -_- |)  
+//                            O\ = /O  
+//                        ____/`---'\____  
+//                      .   ' \\| |// `.  
+//                       / \\||| : |||// \  
+//                     / _||||| -:- |||||- \  
+//                       | | \\\ - /// | |  
+//                     | \_| ''\---/'' | |  
+//                      \ .-\__ `-` ___/-. /  
+//                   ___`. .' /--.--\ `. . __  
+//                ."" '< `.___\_<|>_/___.' >'"".  
+//               | | : `- \`.;`\ _ /`;.`/ - ` : | |  
+//                 \ \ `-. \_ __\ /__ _/ .-` / /  
+//         ======`-.____`-.___\_____/___.-`____.-'======  
+//                            `=---='  
+//  
+//         ............................................. 
+//                            佛祖镇楼               
 
 
 
