--- a/Conf/Profile.conf
+++ b/Conf/Profile.conf
@@ -5,8 +5,10 @@
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20200922
 // @Explain           若有问题，可以去TG群反馈
+// @Attention         本配置文件的Task只更新京东相关脚本
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Profile.conf
 // ==/UserScript==
+
 
 [general]
 server_check_url= http://www.qualcomm.cn/generate_204
@@ -17,23 +19,26 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 
 [task_local]
 # > 京东32合一
-1,7 0,20 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jd.png, enabled=true
+1,7 0,20 * * * https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东, enabled=true
 # > 京东水果
-5 6-18/6 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_fruit.js, tag=东东农场, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdsg.png, enabled=true
+5 6-18/6 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_fruit.js, tag=东东农场, enabled=true
 # > 京豆宠汪汪
-5 */1 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_joy.js, tag=京东宠汪汪, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdww.png, enabled=true
+5 */1 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_joy.js, tag=京东宠汪汪, enabled=true
 # > 京东萌宠
-5 6-18/6 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_pet.js, tag=东东萌宠, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdmc.png, enabled=true
+5 6-18/6 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_pet.js, tag=东东萌宠, enabled=true
 # > 京东种豆
-5 7-21/2 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_plantBean.js, tag=种豆得豆, img-url=https://raw.githubusercontent.com/znz1992/Gallery/master/jdzd.png, enabled=true
+5 7-21/2 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_plantBean.js, tag=种豆得豆, enabled=true
 # > 京东取消关注商品和店铺
 5 23 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_unsubscribe.js, tag=取关店铺商品, enabled=true
 # > 京小超
-11 1-23/5 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_superMarket.js, tag=京小超, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, enabled=true
+11 1-23/5 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_superMarket.js, tag=京小超, enabled=true
 # > 京喜APP签到
-1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js, tag=京喜, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jingxi.png, enabled=true
+1 0 * * * https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js, tag=京喜, enabled=true
 # > 京东进店领豆
-6 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js, tag=进店领豆, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, enabled=true
+6 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js, tag=进店领豆, enabled=true
+# > 手机狂欢节
+1 0-18/6 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_818.js, tag=京东手机狂欢城, enabled=true
+
 
 [rewrite_local]
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Advertising.conf,tag=去广告, enabled=true
@@ -46,6 +51,7 @@ https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Quan_crack.c
 [server_local]
 shadowsocks=music.desperadoj.com:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_vrfn, fast-open=false, udp-relay=false, tag=网易云音乐
 
+
 [dns]
 ;no-system
 server=223.5.5.5
@@ -57,13 +63,16 @@ server=/*testflight.apple.com/8.8.4.4
 server=117.50.11.11
 server=52.80.66.66
 
+
 [policy]
-static=网易云音乐, 网易云音乐, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
+static=网易云音乐, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 static=Youtube, proxy, img-url=https://raw.githubusercontent.com/ddgksf2013/QuantumultX/master/Icon/YouTube.png
 static=Bahamut, proxy, img-url=https://raw.githubusercontent.com/ddgksf2013/QuantumultX/master/Icon/Bahamut.png
 
+
 [server_remote]
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Server/Netease.list,tag=网易云解锁服务器, enabled=true
+
 
 [filter_remote]
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=网易云音乐, enabled=true
@@ -71,6 +80,7 @@ https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/Advertisin
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/Global.list, tag=代理, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/TikTok.list, tag=TikTok, enabled=true
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Filter/Zhihu.list, tag=知乎去AD, enabled=true
+
 
 [filter_local]
 ip-cidr, 10.0.0.0/8, direct
