--- a/Conf/Profile.conf
+++ b/Conf/Profile.conf
@@ -38,7 +38,8 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 6 0 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_shop.js, tag=进店领豆, enabled=true
 # > 手机狂欢节
 1 0-18/6 * * * https://raw.githubusercontent.com/lxk0301/scripts/master/jd_818.js, tag=京东手机狂欢城, enabled=true
-
+# > 京小超蓝币兑换京豆
+11 5 * * * https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Task/jd_blueCoin.js, tag=京小超领蓝币, enabled=true
 
 [rewrite_local]
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Advertising.conf,tag=去广告, enabled=true
@@ -93,24 +94,5 @@ geoip, cn, direct
 final, proxy
 
 [mitm]
-//      ............................................. 
-//                            _ooOoo_  
-//                           o8888888o  
-//                           88" . "88  
-//                           (| -_- |)  
-//                            O\ = /O  
-//                        ____/`---'\____  
-//                      .   ' \\| |// `.  
-//                       / \\||| : |||// \  
-//                     / _||||| -:- |||||- \  
-//                       | | \\\ - /// | |  
-//                     | \_| ''\---/'' | |  
-//                      \ .-\__ `-` ___/-. /  
-//                   ___`. .' /--.--\ `. . __  
-//                ."" '< `.___\_<|>_/___.' >'"".  
-//               | | : `- \`.;`\ _ /`;.`/ - ` : | |  
-//                 \ \ `-. \_ __\ /__ _/ .-` / /  
-//         ======`-.____`-.___\_____/___.-`____.-'======  
-//                            `=---='  
-//  
-//         .............................................         
+
+
