--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -14,7 +14,7 @@ hostname = avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi
 # > Fantastical 解锁SVIP会员订阅 （20200924）
 ^https:\/\/api\.flexibits\.com\/(v1\/auth\/device|v1\/account\/details) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fantastical.js
 
-# > 西窗烛 解锁终身会员 文艺范的福音（20200924）
+# > 西窗烛 解锁终身会员 文艺范的福音（20200924）Attention：登录使用
 https://avoscloud.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
 
 # > 老胡工具箱 微信小程序解除隐藏内容 （20200916）
