--- a/Rewrite/Youtube.conf
+++ b/Rewrite/Youtube.conf
@@ -1,3 +1,8 @@
+/*
+PS：近期新版油管改变广告策略，使得去广告的配置失效。目前有两种解决方案：
+1.抓取最后可用的 YouTube 版本即 15.26.4（版本 ID：836799578）；
+2.不登陆 YouTube App 仍可正常使用下面的配置去广告；
+*/
 hostname = *.googlevideo.com
 
 ^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
