--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -12,13 +12,17 @@
 hostname = duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
+
+# > 色采 Unlock VIP (20200929) Attention：恢复购买
+;The content is consistent with rcam, no longer repeated.
+
 # > 英语阅读 解锁永久会员 （20200926）Attention：登录使用 ⭐️
 ^http:\/\/duoting\.tatatimes\.com\/tataeraapi\/api\.s\?h=QueryVipUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/englishread.js 
 
 # > 趣制作 解锁会员模板视频（20200925）Attention：登录使用
 https://cm.szsszykj.com/interface/GetVip.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qzz.js
 
-# > Fantastical 解锁SVIP会员订阅 （20200924）
+# > Fantastical 解锁SVIP会员订阅 （20200924）⭐️
 ^https:\/\/api\.flexibits\.com\/(v1\/auth\/device|v1\/account\/details) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fantastical.js
 
 # > 西窗烛 解锁终身会员 文艺范的福音（20200924）Attention：登录使用
@@ -75,7 +79,7 @@ https?:\/\/api\.jiaonizuocai\.com url script-response-body https://raw.githubuse
 # > 滴答清单 解锁会员功能（20200903）仅适用旧版 V5.2.51 ID:832943581
 ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ddqd.js
 
-# > 克拉壁纸 解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498
+# > 克拉壁纸 解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498 ⭐️
 ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
 
 # > 剪影 解锁订阅（20200902）
@@ -87,7 +91,7 @@ https?:\/\/api\.jiaonizuocai\.com url script-response-body https://raw.githubuse
 # > 财新 解锁付费文章（20200901）
 https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caixin.js
 
-# > moo 日记永久会员 (20200831)
+# > moo 日记永久会员 (20200831) ⭐️
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
 # > Geist  Picsew 二者解锁会员功能（20200831）
