--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -3,118 +3,126 @@
 // @Author            Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20200926
+// @UpdateTime        20201002
+// @Appreciation      觉得不错👏去公众号菜单栏[更多]赞助我喝杯🥤
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Quan_crack.conf
 // ==/UserScript==
 
 
-hostname = duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
+hostname = avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
 
-# > 色采 Unlock VIP (20200929) Attention：恢复购买
+
+# > 037 汉字的故事 解锁会员字体（20201002）
+https://avoscloud.com/1.1/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hzdgs.js
+
+# > 036 小妖精美化 解锁会员（20201002）
+https://bbs.maibaapp.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xyjmh.js 
+
+# > 035 色采 Unlock VIP (20200929) Attention：恢复购买
 ;The content is consistent with rcam, no longer repeated.
 
-# > 英语阅读 解锁永久会员 （20200926）Attention：登录使用 ⭐️
+# > 034 英语阅读 解锁永久会员 （20200926）Attention：登录使用 ⭐️
 ^http:\/\/duoting\.tatatimes\.com\/tataeraapi\/api\.s\?h=QueryVipUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/englishread.js 
 
-# > 趣制作 解锁会员模板视频（20200925）Attention：登录使用
+# > 033 趣制作 解锁会员模板视频（20200925）Attention：登录使用
 https://cm.szsszykj.com/interface/GetVip.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qzz.js
 
-# > Fantastical 解锁SVIP会员订阅 （20200924）⭐️
+# > 032 Fantastical 解锁SVIP会员订阅 （20200924）⭐️
 ^https:\/\/api\.flexibits\.com\/(v1\/auth\/device|v1\/account\/details) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fantastical.js
 
-# > 西窗烛 解锁终身会员 文艺范的福音（20200924）Attention：登录使用
+# > 031 西窗烛 解锁终身会员 文艺范的福音（20200924）Attention：登录使用
 https://avoscloud.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
 
-# > 老胡工具箱 微信小程序解除隐藏内容 （20200916）
+# > 030 老胡工具箱 微信小程序解除隐藏内容 （20200916）
 https://d.syshhc.top/wp-json/wp/v2/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 一言 解锁终身会员 （20200916）Attention:登录使用
+# > 029 一言 解锁终身会员 （20200916）Attention:登录使用
 http://115.28.168.103:8080/yiyan/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/yiyan.js
 
-# > done 解锁会员功能 PRO （20200914）Attention：登录使用
+# > 028 done 解锁会员功能 PRO （20200914）Attention：登录使用
 http://dbapi.ganbuguo.com/user/userinfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/done.js
 
-# > emby 流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
+# > 027 emby 流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
 ^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://subweb.oss-cn-hongkong.aliyuncs.com/Script/embycrack.js
 
-# > VCUS Unlock VIP (20200912)
+# > 026 VCUS Unlock VIP (20200912)
 ;The content is consistent with rcam, no longer repeated.
 
-# > 手机硬件管家 高级VIP (20200912)
+# > 025 手机硬件管家 高级VIP (20200912)
 http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/phoneyjgj.js
 
-# > MeisterTask Premium(20200910)
+# > 024 MeisterTask Premium(20200910)
 https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/meistertask.js
 
-# > 实时天气 解锁VIP功能（20200909）-----失效已加密
+# > 023 实时天气 解锁VIP功能（20200909）-----失效已加密
 ;^https:\/\/subs\.platforms\.team\/apple\/verifyTransaction$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sstq.js
 
-# > 乐心健康 步数修改 （20200908）Attention：APP里面数据共享，打开微信和支付宝，需要修改步数的时候，打开乐心健康
+# > 022 乐心健康 步数修改 （20200908）Attention：APP里面数据共享，打开微信和支付宝，需要修改步数的时候，打开乐心健康
 ^https:\/\/sports\.lifesense\.com\/sport_service\/sport\/sport\/uploadMobileStepV2 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lxhealth.js
 
-# > pushover 解锁会员（20200905）
+# > 021 pushover 解锁会员（20200905）
 ^https://api.pushover.net/1/messages.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/pushover.js
 
-# > productive Unblock（20200905）
+# > 020 productive Unblock（20200905）
 ^https:\/\/subs\.platforms\.team\/.+\/apple\/verify$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/productive.js
 
-# > 葫芦时刻 解锁SVIP（20200905）
+# > 019 葫芦时刻 解锁SVIP（20200905）
 ^https:\/\/api\.hulusaas\.com\/api\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hulu.js
 
-# > 蜗牛睡眠 解锁会员音乐（20200906）
+# > 018 蜗牛睡眠 解锁会员音乐（20200906）
 ^https:\/\/(snailsleep\.net\/|(music|community)\.snailsleep\.net\/)(snail\/v1\/profile\/get|snail-music\/music\/(sleeping|meditation)\/single\/list) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/wnsm.js
 
-# > 菜谱大全 解锁VIP功能（20200906）
+# > 017 菜谱大全 解锁VIP功能（20200906）
 https?:\/\/api\.jiaonizuocai\.com url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cpdq.js
 
-# > 大象冥想 解锁会员音乐（20200904）
+# > 016 大象冥想 解锁会员音乐（20200904）
 ^https?:\/\/nmeditation\.snailsleep\.net\/meditation-(audio|user|order|audio)\/(api|user)\/(audio\/master\/detail|get\/info|order/user\/vip\/info|ad\/get) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/dxmx.js
 
-# > 京东APP商品显示历史价格（20200904）
+# > 015 京东APP商品显示历史价格（20200904）
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/jd_price.js
 
-# > 滴答清单 解锁会员功能（20200903）仅适用旧版 V5.2.51 ID:832943581
+# > 014 滴答清单 解锁会员功能（20200903）仅适用旧版 V5.2.51 ID:832943581
 ^https:\/\/(ticktick|dida365)\.com\/api\/v2\/user\/status url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ddqd.js
 
-# > 克拉壁纸 解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498 ⭐️
+# > 013 克拉壁纸 解锁付费壁纸（20200903）仅适用旧版 V4.7.3 ID:833188498 ⭐️
 ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
 
-# > 剪影 解锁订阅（20200902）
+# > 012 剪影 解锁订阅（20200902）
 ;The content is consistent with rcam, no longer repeated.    
 
-# > lensa 人像修图解锁（20200902）
+# > 011 lensa 人像修图解锁（20200902）
 ^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lensa.js
 
-# > 财新 解锁付费文章（20200901）
+# > 010 财新 解锁付费文章（20200901）
 https://mappsv5.caixin.com/articlev5/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caixin.js
 
-# > moo 日记永久会员 (20200831) ⭐️
+# > 009 moo 日记永久会员 (20200831) ⭐️
 https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
 
-# > Geist  Picsew 二者解锁会员功能（20200831）
+# > 008 Geist  Picsew 二者解锁会员功能（20200831）
 ;The content is consistent with rcam, no longer repeated.
 
-# > RCam 解锁会员功能（20200830）
+# > 007 RCam 解锁会员功能（20200830）
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
 
 # > 小程序解除隐藏内容
-# > 酸鸡汤,老爷花苑（光头的小程序，两个通用）（20200916）
+# > 006 酸鸡汤,老爷花苑（光头的小程序，两个通用）（20200916）
 https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 黑科技软件（20200901）
+# > 005 黑科技软件（20200901）
 ^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 天泽后花园（20200901）
+# > 004 天泽后花园（20200901）
 ^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 小野分享（20200901）
+# > 003 小野分享（20200901）
 ^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 搜罗好货（20200901）
+# > 002 搜罗好货（20200901）
 ^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
 
-# > 最新版keep（20200819）
+# > 001 最新版keep（20200819）
 ^https:\/\/api\.gotokeep\.com\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/keep.js
