--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -15,7 +15,7 @@ hostname = avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.c
 
 
 
-# > 037 汉字的故事 解锁会员字体（20201002）
+# > 037 汉字的故事 解锁会员字体 探寻古汉字之美（20201002）
 https://avoscloud.com/1.1/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hzdgs.js
 
 # > 036 小妖精美化 解锁会员（20201002）
