--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -18,7 +18,7 @@ hostname = avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.c
 # > 037 汉字的故事 解锁会员字体 探寻古汉字之美（20201002）
 https://avoscloud.com/1.1/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hzdgs.js
 
-# > 036 小妖精美化 解锁会员（20201002）
+# > 036 小妖精美化 解锁会员 美化桌面widget（20201002）
 https://bbs.maibaapp.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xyjmh.js 
 
 # > 035 色采 Unlock VIP (20200929) Attention：恢复购买
