--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -15,9 +15,8 @@ hostname = api.bspapp.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.co
 
 
 
-# > 038 纸糖壁纸 微信小程序 免广告直接下载原图壁纸（20201006）Attention：登录使用
+# > 038 纸糖壁纸 微信小程序 免广告直接下载原图壁纸（20201006）Attention：登录使用⭐️
 https://api.bspapp.com/client url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ztbz.js
-
 
 # > 037 汉字的故事 解锁会员字体 探寻古汉字之美（20201002）
 https://avoscloud.com/1.1/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hzdgs.js
