--- a/Rewrite/Youtube.conf
+++ b/Rewrite/Youtube.conf
@@ -3,6 +3,16 @@ PS：近期新版油管改变广告策略，使得去广告的配置失效。目
 1.抓取最后可用的 YouTube 版本即 15.26.4（版本 ID：836799578）；
 2.不登陆 YouTube App 仍可正常使用下面的配置去广告；
 */
-hostname = *.googlevideo.com
+hostname =*.googlevideo.com,*.youtube.com,*.googleapis.com
 
-^https://[\s\S]*\.googlevideo\.com/.*&(oad|ctier) url reject-200
+#youtube ADS
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-200
+^https?:\/\/.+\.googlevideo\.com\/(ptracking|videogoodput) url reject-img
+^https?:\/\/r[0-9].+\.googlevideo\.com\/.+owc= url reject-img
+^https?:\/\/.+\.youtube\.com\/(.+adformat|.+get_ads) url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/(ads|atr|qoe) url reject-img
+^https?:\/\/.+\.youtube\.com\/(csi_204|gen_204|generate_204|get_midroll|pagead|ptracking) url reject-img
+^https?:\/\/.+\.youtube\.com\/pcs\/activeview url reject-img
+^https?:\/\/.+\.googleapis.com/.+ad_break url reject-img
+^https?:\/\/.+\.googleapis.com/adsmeasurement url reject-img
+ctier=[A-Z] url 302 ctier=A
