--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,5 +1,6 @@
 // ==UserScript==
 // @Name              QX Function 脚本
+// @Download          https://dlj.li/5gq5sw
 // @Author            GB-png
 // @Tg group          t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
