--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -2,7 +2,7 @@
 // @Name              QX Function 脚本
 // @Download          https://dlj.li/5gq5sw
 // @Author            GB-png
-// @Tg group          t.me/ddgksf2013
+// @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201019
 // @Explain           小小影视去广告&破解
