--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,11 +1,10 @@
 // ==UserScript==
-// @Name              QX Function 脚本
+// @Name              小小影视去广告&破解
 // @Download          https://dlj.li/5gq5sw
 // @Author            GB-png, modified by cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20201019
-// @Explain           小小影视去广告&破解
+// @UpdateTime        20201019      
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Xxys.conf
 // ==/UserScript==
 
