--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              小小影视去广告&破解
 // @Download          https://dlj.li/5gq5sw
-// @Author            GB-png, modified by cuttlefish
+// @Author            @GB-png, Modified by Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201019      
