--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @Name              小小影视去广告&破解
+// @Name              小小影视去广告&破解**最新TF版**
 // @Download          https://dlj.li/5gq5sw
 // @Author            @GB-png, Modified by Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
