--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201020
-// @Appreciation      觉得不错👏去公众号菜单栏赞助我喝杯🥤
+// @Appreciation      觉得不错👏欢迎去公众号菜单栏赞助我喝杯🥤
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Quan_crack.conf
 // ==/UserScript==
