--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -8,6 +8,6 @@
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Xxys.conf
 // ==/UserScript==
 
-hostname = *.xjwdapps.com,*.huaerdadi.com
+hostname = *.leyiapps.com,*.huaerdadi.com
 
 https:\/\/.*\..*\.com\/(ssp-svr\/ssp\/list3|ucp/index) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
