--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -14,7 +14,7 @@ hostname = api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, d.smkj33.t
 
 
 
-# > Fitplan 要不要做做Vip专属有氧运动 登录使用（20201107）
+# > 046 Fitplan 要不要做做Vip专属有氧运动 登录使用（20201107）
 https://api2.fitplanapp.com/fitplan-server/v2/user/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fitplan.js
 
 
