--- a/Rewrite/Xxys.conf
+++ b/Rewrite/Xxys.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @Name              小小影视去广告&破解**最新TF版**
-// @Download          https://dlj.li/5gq5sw
+// @Download          https://www.xx9.tv
 // @Author            @GB-png, Modified by Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
