--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -134,7 +134,7 @@ https://diary.7english.cn:2433//api/user/userInfo url script-response-body https
 ;The content is consistent with rcam, no longer repeated.
 
 # > 007 RCam 解锁会员功能（20200830）
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt - script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js
 
 # > 006 酸鸡汤,老爷花苑（光头的小程序，两个通用）（20200916）
 https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
