--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -13,6 +13,18 @@
 hostname = license.pdfexpert.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, d.smkj33.top, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, api.bspapp.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
+# > 051 豌豆清单 为你的日程好好规划一下 内容见公众号 (20201112)
+
+
+# > 050 Quicut 体验大片视频编辑的感觉 内容见公众号(20201112)
+
+
+# > 049 Fiton 一起来做有氧呼吸 内容见公众号(20201111)
+
+
+# > 048 伴鱼绘本 孩子你可或缺的英语绘本读物 内容见公众号(20201109) 
+
+
 # > 047 Document 解锁PDF会员编辑功能 一次性解锁（20201108）
 https:\/\/license\.pdfexpert\.com\/api\/.+\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/documents.js
 
