--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -83,7 +83,7 @@ http://115.28.168.103:8080/yiyan/* url script-response-body https://raw.githubus
 http://dbapi.ganbuguo.com/user/userinfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/done.js
 
 # > 027 emby 流媒体解锁订阅（20200913）Attention: 配合普拉斯影业提供的账号可进行观影：域名: https://movie.xeton.dev 端口: 443 账号：普拉斯影业 密码：plusisbest
-^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://subweb.oss-cn-hongkong.aliyuncs.com/Script/embycrack.js
+^https:\/\/mb3admin\.com\/admin\/service(\/registration\/validateDevice|\/appstore\/register|\/registration\/validate|\/registration\/getStatus|\/supporter\/retrievekey) url script-echo-response https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/emby.js
 
 # > 026 VCUS Unlock VIP (20200912)
 ;The content is consistent with rcam, no longer repeated.
