--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -14,7 +14,7 @@ hostname = www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, licen
 
 
 # > 050 豌豆清单 为你的日程好好规划一下(20201112)
-^https:\/\/www\.40sishi\.com\/list\/user\/profile$ url script-response-bod https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/wdqd.js
+^https:\/\/www\.40sishi\.com\/list\/user\/profile$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/wdqd.js
 
 # > 049 Quicut 体验大片视频编辑的感觉 (20201112)
 http://outcut.szsszykj.com/api/OverseasPay/GetVip url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qc.js
