--- a/Loon/Xxys.conf
+++ b/Loon/Xxys.conf
@@ -1,13 +1,14 @@
 // ==UserScript==
 // @Name              小小影视去广告&破解**最新TF版**
+// @Suitable          Loon软件
 // @Download          https://www.xx9.tv
 // @Author            @GB-png, Modified by Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20201030      
+// @UpdateTime        20201118     
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Loon/Xxys.conf
 // ==/UserScript==
 
 hostname = *.xxjjappss.com,*.huaerdadi.com
 
-https:\/\/.*\..*\.com\/(ssp-svr\/ssp\/list3|ucp/index) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js
+http-request https:\/\/.*\..*\.com\/(ssp-svr\/ssp\/list3|ucp/index) requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xxys.js, tag=小小影视
