--- a/Loon/Xxys.conf
+++ b/Loon/Xxys.conf
@@ -1,10 +1,10 @@
 // ==UserScript==
 // @Name              小小影视去广告&破解**最新TF版**
-// @Suitable          Loon软件
+// @Suitable          Loon软件,测试未去广告，QX有效
 // @Download          https://www.xx9.tv
 // @Author            @GB-png, Modified by Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
-// @UpdateTime        20201118     
+// @UpdateTime        20201121     
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Loon/Xxys.conf
 // ==/UserScript==
 
