--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @Name              QX Crack 脚本
+// @ScriptName              QX Crack 脚本
 // @Author            Cuttlefish
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
