--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -28,7 +28,7 @@ https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response
 # > 049 Quicut 体验大片视频编辑的感觉 (20201112)
 http://outcut.szsszykj.com/api/OverseasPay/GetVip url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qc.js
 
-# > 048 伴鱼绘本 孩子你可或缺的英语绘本读物(20201109) 
+# > 048 伴鱼绘本 孩子不可或缺的英语绘本读物(20201109) 
 https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/byhb.js
 
 # > 047 Document 解锁PDF会员编辑功能 一次性解锁（20201108）
