--- a/Conf/Quan_crack.conf
+++ b/Conf/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @Tg group          https://t.me/ddgksf2013
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20201124
-// @Appreciation      觉得不错👏欢迎去公众号菜单栏赞助我喝杯🥤
+// @Attention         请勿引用本重写配置
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Conf/Quan_crack.conf
 // ==/UserScript==
@@ -12,7 +12,7 @@
 
 hostname = api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, license.pdfexpert.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, d.smkj33.top, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, api.bspapp.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, avoscloud.com, api.flexibits.com, d.syshhc.top, 115.28.168.103, dbapi.ganbuguo.com, mb3admin.com, api.591master.com, www.mindmeister.com, subs.platforms.team, sports.lifesense.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, snailsleep.net,music.snailsleep.net,community.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, api.m.jd.com, claritywallpaper.com, subscription-service.neuralprisma.com, mappsv5.caixin.com, diary.7english.cn, buy.itunes.apple.com, api.gotokeep.com, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
-this is a test message
+Please don't quote this rewrite configuration
 
 # > 053 美颜相机 解锁内购（20201123）
 https://api.meiyan.com/iap/verify.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/myxj.js
