--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -15,4 +15,4 @@
 hostname = d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
-^https:\/\/.*\..*\..*\/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+^https:\/\/.*\..*\..*\/wp-json/(wp|mp)/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
