--- a/Rewrite/Ua.conf
+++ b/Rewrite/Ua.conf
@@ -8,7 +8,7 @@
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Ua.conf
 // ==/UserScript==
 
-hostname = *.csdn.net, 
+hostname = blog.csdn.net, 
 
 
-^https:\/\/.*\.csdn\.net url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_4_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Html5Plus/1.0$2
+^https:\/\/blog\.csdn\.net url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36$2
