--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -8,11 +8,27 @@
 // @UpdateTime        20201116
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Applet.conf
-// @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑、御花园
+// @Suitable          适用的小程序：森茂雅苑、黑科技软件、天泽后花园、小野分享、 酸酸乳鸡汤、老爷花苑、御花园、搜罗好货
 // ==/UserScript==
 
 
 hostname = d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, 
 
 
-^https:\/\/.*\..*\..*\/wp-json/(wp|mp)/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+# > 006 森茂雅苑 微信小程序解锁隐藏内容 去除广告直接查看内容（20201027）
+https://d.smkj33.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+
+# > 005 酸鸡汤,老爷花苑（光头的小程序，两个通用）微信小程序解锁隐藏内容 去除广告直接查看内容（20200916）
+https://[a-z]+.ddly666.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+
+# > 004 黑科技软件（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
+^https:\/\/hkj178.com/wp-json/mp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+
+# > 003 天泽后花园（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
+^https:\/\/a.jxjt888.top/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+
+# > 002 小野分享（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
+^https:\/\/lysl2020.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
+
+# > 001 搜罗好货（20200901）微信小程序解锁隐藏内容 去除广告直接查看内容
+^https:\/\/www.i3zh.com/wp-json/wp/v2/posts/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcx.js
