--- a/Rewrite/Applet.conf
+++ b/Rewrite/Applet.conf
@@ -12,11 +12,16 @@
 // ==/UserScript==
 
 
-hostname = d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, 
+hostname = d.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, 
+
+
+
+# > 008 扎比科技资源箱 微信小程序crack 弹框显示最新三天download地址（20201214）
+https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/jabi.js
 
 # > 007 AppleAndroid 微信小程序破解 弹框显示内容（20201214）
 https://iosoi.cn/wp-json/wp/v2/posts/\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/aa.js
-# > 辅助去除页面小卡片式广告
+# > 辅助去除页面嵌入式式卡片广告
 https://iosoi.cn/wp-content/plugins/xingshu.php url response-body adid":"[^"]*" response-body adid":""
 
 # > 006 森茂雅苑 微信小程序解锁隐藏内容 去除广告直接查看内容（20201027）
